compiler/test-data/parser/errors/control/select_missing_brace.frel
module test

blueprint Bad {
    x : i32 = 5

    select
        x < 0 => text { "negative" }
        else => text { "positive" }
    }
}
